# scally

./: .gitignore  README.md  github.py  pyproject.toml  rendered.md  repo.py
backend/: package-lock.json  server.js
frontend/: package-lock.json  package.json  pnpm-lock.yaml
frontend/public/: index.html
frontend/src/: App.css  App.js  Logo.css  logo.js
server/: github.py  loader.py  main.py  pyproject.toml  repo.py  server.py
